k8s/observability/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agrosolutions-observability
  labels:
    app: agrosolutions-observability
    environment: production
